# string

./: .codebase_state.json  .gitignore  .gitmodules  .memignore  .memignore.example  AGENT_REFACTORING_SUMMARY.md  AUTONOMOUS_ERROR_RECOVERY_IMPLEMENTATION_SUMMARY.md  BACKEND_CONFIGURATION_FIX.md  CLAUDE.md  COMPLETE_CHANGES_SUMMARY.md  ENHANCED_TOOL_EXECUTOR_IMPLEMENTATION_SUMMARY.md  HANDOFF_CLI.md  MODELMANAGER_INTEGRATION_GUIDE.md  ORCHESTRATOR_INTEGRATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERPLEXITY.md  PHASE1_PROJECT_MEMORY_ISOLATION_SUMMARY.md  README_GGUF_SERVICE.md  STRING.MD  TASK_1_2_IMPLEMENTATION_SUMMARY.md  TASK_1_3_IMPLEMENTATION_SUMMARY.md  TASK_2_1_IMPLEMENTATION_SUMMARY.md  TECHNICAL_SUMMARY_COMPLETE_FIX_JOURNEY.md  TOOL_EXECUTOR_SUMMARY.md  agent_mapping_audit_report.md  agent_mapping_audit_results.json  analyze_classification_failures.py  analyze_routing_failures.py  architecture_validation_results.json  audit_agent_mapping.py  autonomous_recovery_test_results_1753516109.json  backend_controller.py  basic_recovery_test_results_1753515694.json  classification_failure_analysis.md  classifier_improvement_recommendations.json  classifier_regression_results.json  classifier_regression_test_suite.json  config.yaml  config_loader.py  create_classifier_regression_suite.py  (+98 more)
agents/: __init__.py  base.py  code_editor.py  code_quality.py  orchestrator.py  specialists.py  toolbox.py  web_researcher.py  web_researcher_optimized.py
cli/: backend_manager.py  health_check.py  main.py  runtime_health.py  runtime_home.py
config/: action_permissions.yaml  agent_intent_registry.yaml  codebase_filter.yaml  models.yaml
docs/: architecture-validation-summary.md  memignore-guide.md
models/: __init__.py  config.json  integration.py  manager.py
qdrant_storage/: meta.json
qdrant_storage/alice_calculator_app_alice_calculator_app_codebase_cube/: meta.json
qdrant_storage/alice_project_a_alice_project_a_codebase_cube/: meta.json
qdrant_storage/alice_project_b_alice_project_b_codebase_cube/: meta.json
qdrant_storage/bob_project_a_bob_project_a_codebase_cube/: meta.json
qdrant_storage/bob_project_c_bob_project_c_codebase_cube/: meta.json
qdrant_storage/default_user_default_user_codebase_cube_1752911502/: meta.json
qdrant_storage/system_startup_system_startup_codebase_cube/: meta.json
qdrant_storage/test_user_test_user_codebase_cube/: meta.json
scripts/: install_dependencies.py  sync_shared.py
src/agents/: autonomous_tool_executor.py  confirmation_system.py  enhanced_tool_executor.py  error_analysis.py  prompt_handler.py  recovery_safety.py  recovery_workflow.py
string_ai_coding_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_codebase/: README.md  math_utils.py  string_processor.py  unique_functions.py
test_qdrant/: meta.json
test_qdrant_act/: meta.json
test_qdrant_simple/: meta.json
test_qdrant_storage/: meta.json
test_workspace/: calculator.py  test_log_doc_creation_1753477819.json
test_workspace_comprehensive/: calculator_comprehensive.py  comprehensive_test_results_multi_agent_1753513123.json  comprehensive_test_results_multi_agent_1753513147.json  comprehensive_test_results_multi_agent_1753513164.json  test_summary_multi_agent_1753513123.md  test_summary_multi_agent_1753513147.md  test_summary_multi_agent_1753513164.md
tests/: test_intent_classifier.py  test_intent_routing_integration.py
utils/: __init__.py  preference_parser.py  test_preference_parser.py
validation/: coding_corpus.json  coding_models_comparison_report.md  coding_results.json  coding_results_cli.json  coding_results_gguf.json  coding_results_normal.json  coding_validation_report.md  corpus.json  results.json
(+39 files in other folders)
